# octo-py

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/: main.py  octopus.py
tests/: __init__.py  conftest.py  test_octopus.py
