[project]
name = "octo-py"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    {name = "Sean Johnson",email = "seanson@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.0.0,<5.0.0)",
    "pytest-mock (>=3.12.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

